<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/grp1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/drawer_contact"
            android:checked="true"
            android:icon="@drawable/ic_account"
            android:title="@string/contact"/>
    </group>

    <group
        android:id="@+id/grp2"
        android:checkableBehavior="single">
        <item
            android:id="@+id/drawer_career"
            android:icon="@drawable/ic_school"
            android:title="@string/career"/>

        <item
            android:id="@+id/drawer_skills"
            android:icon="@drawable/ic_responsive"
            android:title="@string/skills"/>

        <item
            android:id="@+id/drawer_trips"
            android:icon="@drawable/ic_airplane"
            android:title="@string/trips"/>
    </group>

    <group
        android:id="@+id/grp4"
        android:checkableBehavior="single">
        <item
            android:id="@+id/drawer_about"
            android:icon="@drawable/ic_information"
            android:title="@string/about"/>
    </group>
</menu>