<android.support.wearable.view.BoxInsetLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <android.support.wearable.view.CardScrollView
        android:id="@+id/card_scroll_view"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        app:layout_box="all">

        <android.support.wearable.view.CardFrame
            android:layout_height="match_parent"
            android:layout_width="match_parent">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/title"
                    tools:text="@string/website"/>

                <ImageView
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:id="@+id/image"
                    tools:src="@drawable/qr_mysite"
                    android:contentDescription="QR Code" />
            </LinearLayout>


        </android.support.wearable.view.CardFrame>
    </android.support.wearable.view.CardScrollView>


</android.support.wearable.view.BoxInsetLayout>